first attempt at adding participants functionality
