# middleware/validate.js
@@ -23,6 +23,31 @@ const saveEvent = (req, res, next) => {
   });
 };
 
+const saveParticipant = (req, res, next) => {
+  const validationRule = {
+    first_name: 'required|string',
+    last_name: 'required|string',
+    email: 'required|email',
+    event_id: 'required|string',
+    joined_at: 'required|date',
+    status: 'required|string',
+    created_at: 'date',
+    updated_at: 'date',
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
-  saveEvent
+  saveEvent,
+  saveParticipant
 };
