# routes/participants.js
@@ -1,0 +1,18 @@
+const express = require('express');
+const router = express.Router();
+
+const participantsController = require('../controllers/participants');
+const validation = require('../middleware/validate');
+const { isAuthenticated } = require('../middleware/authenticate');
+
+router.get('/', participantsController.getAll);
+
+router.get('/:id', participantsController.getSingle);
+
+router.post('/', isAuthenticated, validation.saveParticipant, participantsController.createParticipant);
+
+router.put('/:id', isAuthenticated, validation.saveParticipant, participantsController.updateParticipant);
+
+router.delete('/:id', isAuthenticated, participantsController.deleteParticipant);
+
+module.exports = router;
